--- a/IQ-fight/IQ-fight/Storyboard.storyboard
+++ b/IQ-fight/IQ-fight/Storyboard.storyboard
@@ -692,7 +692,7 @@
                                             <action selector="answerButtonTapped:" destination="AdP-w4-jkd" eventType="touchUpInside" id="Sh5-HR-9e7"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nobody answered correct on the previous question" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Dwf-tw-3Nv">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="peshotesttesttest@abv.bg answered correct on question 5" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Dwf-tw-3Nv">
                                         <rect key="frame" x="10" y="469" width="300" height="21"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
